snapshots/care/data4life/hc-util-sdk-kmp/error/1.14.0-SNAPSHOT/error-1.14.0-20220831.180107-1-sources.jar.sha256
27f211b41b2153bbeb19409a23cb2e537397c84d6e061a286588fb0aaa5b6e38